# CoursesFastApiTutorial

./: README.md  db.sqlite3  pyproject.toml
docs/: CoursesFastAPITutorial.postman_collection.json
src/: application.py
src/config/: database.py
src/models/: courses.py
src/repositories/: courses.py
src/schemas/: courses.py
